# hera_description

./: CMakeLists.txt  Dockerfile  README.md  TODO.md  entrypoint.sh  install_dependencies.sh  package.xml  robot-devices.rules
config/controller/head/: head.yaml
config/controller/manipulador/: dynamixel_controller.yaml  manip_controller.yaml
config/kinematics/: kinematics.yaml
config/rviz/: vizualize_model.rviz
launch/: bringup.launch  devices.xml  interface.xml  load_description.launch  load_robot.xml  simulation.launch.py  simulation.xml  urdf_visualize.launch.py  vizualize_model.launch
meshes/: torso.stl
model/robot/: hera.urdf.xacro
model/urdf/actuators/: base.urdf.xacro  head.urdf.xacro  torso.urdf.xacro
model/urdf/sensors/: asus_xtion.urdf.xacro  hokuyo_urg.urdf.xacro  hokuyo_utm.urdf.xacro  kinect_one.urdf.xacro
robot/: hera.urdf.xacro
robots/: hera_full.urdf.xacro
src/base/: Sabertooth.cpp  Sabertooth.h  base.ino  odom.py
src/head/: head.ino
urdf/: commons.urdf.xacro  hera.urdf
urdf/actuators/: base.urdf.xacro  torso.urdf.xacro
urdf/actuators/manipulator/: manip.urdf.xacro
urdf/sensors/: asus_xtion.urdf.xacro  hokuyo_urg.urdf.xacro  hokuyo_utm.urdf.xacro  kinect_one.urdf.xacro
urdf/simulation/: asus_xtion.gazebo.xacro  kinect_one.gazebo.xacro  manipulator.gazebo.xacro  manipulator.gazebo.xacro.txt
